// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withEditor Should render Component with FormEditor when apply withEditor HOC 1`] = `
<DocumentFragment>
  <section
    class="af-editor"
  >
    <input
      class="af-component"
      id="idtext"
      name="nametext"
      type="text"
      value="hello"
    />
  </section>
</DocumentFragment>
`;

exports[`withEditor Should render Component with FormEditor when apply withEditor HOC and isOpenEditor true 1`] = `
<DocumentFragment>
  <section
    class="af-editor"
  >
    <input
      class="af-component"
      id="idtext"
      name="nametext"
      type="text"
      value="hello"
    />
    <div
      class="af-draggable-container react-draggable"
      style="transform: translate(0px,0px);"
    >
      <div
        class="af-draggable"
      >
        <h3
          class="af-draggable__title"
        >
          Props Editor
          <div
            class="af-draggable__tools"
          >
            <i
              class="glyphicon glyphicon-move"
            />
            <i
              class="glyphicon glyphicon-close"
            />
          </div>
        </h3>
        <div
          class="af-draggable__content"
        >
          <form
            class="af-form-editor"
          >
            <div
              class="af-form-editor__field"
            >
              <label
                class="af-form__group-label"
                for="className"
              >
                className
              </label>
              <input
                class="af-form__input-text"
                id="className"
                name="className"
                type="text"
                value="af-component"
              />
            </div>
          </form>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`withEditor Shouldn't render Component with isOpenEditor false 1`] = `
<DocumentFragment>
  <section
    class="af-editor"
  >
    <input
      class="af-component"
      id="idtext"
      name="nametext"
      type="text"
      value="hello"
    />
  </section>
</DocumentFragment>
`;
